--- a/src/App.css
+++ b/src/App.css
@@ -2,30 +2,100 @@
   box-sizing: border-box;
 }
 
+/* .App {
+  display: flex;
+  flex-direction: column;
+} */
+
+body {
+  position: relative;
+  background-color: black;
+}
+
 .photo-container {
   text-align: center;
   font-size: 0; /* remove extra pixels of space (added b/c of font descender elements) */
+  height: 100vh;
+  /* overflow: scroll; */
 }
 
 .photo {
-  height: 100vh;
+  height: 100%;
+}
+
+header {
+  width: 100%;
+  display: flex;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer {
+  position: fixed;
+  display: flex;
+  bottom: 0;
+  z-index: 1;
+
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  /* flex-direc */
+}
+
+.button-container {
+  /* position: fixed; */
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.Timer {
+  color: white;
+  font-size: 28px;
+  margin: 10px;
+  padding: 2px 6px;
+
+  /* 
+  If Background Color is White:
+  color: black;
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 4px;
+  border: none; */
+}
+
+.menuButton img,
+.arrowButton img,
+.playButton img,
+.pauseButton img {
+  filter: invert(100%);
 }
 
 .menuButton,
 .arrowButton,
 .playButton,
 .pauseButton {
-  /* min-height: 64px;
-  min-width: 64px; */
-  margin: 20px;
+  background: transparent;
+  border: none;
+
   display: flex;
   align-items: center;
   justify-content: center;
-  background: white;
+  margin: 20px;
+
+  /* 
+  If Background Color is White:
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 4px;
   border: none;
-  /* border-radius: gray; */
-  /* box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-  border: 2px solid transparent; */
+  */
+}
+
+.playButton {
+  padding: 5px 8px;
 }
 
 .menuButton:hover,
