--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,8 @@ body {
 .photo-container {
   text-align: center;
   font-size: 0; /* remove extra pixels of space (added b/c of font descender elements) */
-  height: 100vh;
-  /* overflow: scroll; */
+  height: 100%;
+  max-height: 100vh;
 }
 
 .photo {
@@ -38,15 +38,25 @@ header {
   align-items: center;
 }
 
+/* App Logo Text */
+header p {
+  font-size: 20px;
+  /* font-style: italic; */
+  font-weight: bold;
+  margin: 20px;
+}
+
 footer {
   position: fixed;
   display: flex;
   bottom: 0;
   z-index: 1;
 
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: end;
+  width: 100%;
+
   /* flex-direc */
 }
 
@@ -56,6 +66,10 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.vertical {
+  flex-direction: column;
 }
 
 .Timer {
@@ -75,14 +89,16 @@ footer {
 .menuButton img,
 .arrowButton img,
 .playButton img,
-.pauseButton img {
+.pauseButton img,
+.infoButton img {
   filter: invert(100%);
 }
 
 .menuButton,
 .arrowButton,
 .playButton,
-.pauseButton {
+.pauseButton,
+.infoButton {
   background: transparent;
   border: none;
 
@@ -106,7 +122,8 @@ footer {
 .menuButton:hover,
 .arrowButton:hover,
 .playButton:hover,
-.pauseButton:hover {
+.pauseButton:hover,
+.infoButton:hover {
   cursor: pointer;
 }
 
