Make attribution title bold

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,11 @@ body {
   height: 100%;
 }
 
+.credit-title {
+  /* font-weight */
+  font-weight: bold;
+}
+
 header {
   width: 100%;
   display: flex;
