Fix small errors, including adding alts and aria-labels

--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ footer {
 
   flex-direction: row;
   justify-content: space-between;
-  align-items: end;
+  align-items: flex-end;
   width: 100%;
 }
 
