Add drop shadows

--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,7 @@ footer {
   font-size: 28px;
   margin: 10px;
   padding: 2px 6px;
+  filter: drop-shadow(4px 3px 4px rgb(0, 0, 0));
 
   /* 
   If Background Color is White:
@@ -97,7 +98,7 @@ footer {
 .playButton img,
 .pauseButton img,
 .infoButton img {
-  filter: invert(100%);
+  filter: invert(100%) drop-shadow(4px 3px 4px rgb(0, 0, 0));
 }
 
 .menuButton,
